--- a/account.html
+++ b/account.html
@@ -4,129 +4,99 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>我的帳號｜晨哥陶藝</title>
+
+  <!-- Bootstrap (可沿用你專案其他版本) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
+
+  <!-- 本頁樣式 -->
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <!-- 內頁固定白底導覽列 -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top scrolled">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">晨哥陶藝</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto align-items-center">
-          <li class="nav-item"><a class="nav-link" href="index.html">首頁</a></li>
-          <li class="nav-item"><a class="nav-link" href="products.html">全部作品</a></li>
-          <li class="nav-item"><a class="nav-link" href="news.html">最新消息</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">關於我們</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Instagram</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">YouTube</a></li>
-          <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-search"></i></a></li>
-          <li class="nav-item"><a class="nav-link active" href="account.html"><i class="bi bi-person"></i></a></li>
-          <li class="nav-item position-relative">
-            <a class="nav-link" href="#" id="cart-icon"><i class="bi bi-cart"></i><span id="cart-count" class="cart-badge">0</span></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <main class="page-padding">
-    
-
-    <!-- 內容 -->
-    <section class="py-5">
+    <!-- 導覽列 -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
-        <div class="row g-4">
-          <!-- 左：表單 -->
-          <div class="col-lg-6">
-            <div class="card shadow-sm account-card">
-              <div class="card-body p-4">
-                <!-- 登入表單 -->
-                <form id="login-form" novalidate>
-                  <h2 class="h4 fw-bold mb-3">登入</h2>
-                  <div class="mb-3">
-                    <label for="login-identity" class="form-label">使用者名稱 或 電子郵件 <span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" id="login-identity" required>
-                    <div class="invalid-feedback">請輸入使用者名稱或電子郵件</div>
-                  </div>
-                  <div class="mb-3 position-relative">
-                    <label for="login-password" class="form-label">密碼 <span class="text-danger">*</span></label>
-                    <div class="input-group">
-                      <input type="password" class="form-control" id="login-password" required>
-                      <button class="btn btn-outline-secondary password-toggle" type="button" data-target="#login-password" aria-label="顯示/隱藏密碼"><i class="bi bi-eye"></i></button>
-                      <div class="invalid-feedback">請輸入密碼</div>
-                    </div>
-                  </div>
-                  <div class="d-flex align-items-center justify-content-between mb-3">
-                    <div class="form-check">
-                      <input class="form-check-input" type="checkbox" id="rememberMe">
-                      <label class="form-check-label" for="rememberMe">記住密碼</label>
-                    </div>
-                    <a href="#" class="small forgot-link">忘記密碼？</a>
-                  </div>
-                  <button type="submit" class="btn btn-gray w-100">登入</button>
-                </form>
+        <a class="navbar-brand fw-bold" href="index.html">晨哥陶藝</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto align-items-center">
+            <li class="nav-item"><a class="nav-link" href="index.html">首頁</a></li>
+            <li class="nav-item"><a class="nav-link" href="products.html">全部作品</a></li>
+            <li class="nav-item"><a class="nav-link" href="news.html">最新消息</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">關於我們</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Instagram</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">YouTube</a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-search"></i></a></li>
+            <li class="nav-item"><a class="nav-link" href="account.html"><i class="bi bi-person"></i></a></li>
+            <li class="nav-item position-relative">
+            <li class="nav-item position-relative"><a class="nav-link" href="#" id="cart-icon"><i class="bi bi-cart"></i>
+                <span id="cart-count" class="cart-badge">0</span>
+             </a>
+            </li>
 
-                <!-- 註冊表單 -->
-                <form id="register-form" class="d-none" novalidate>
-                  <h2 class="h4 fw-bold mb-3">註冊</h2>
-                  <div class="mb-3">
-                    <label for="reg-username" class="form-label">使用者名稱 <span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" id="reg-username" required>
-                    <div class="invalid-feedback">請輸入使用者名稱</div>
-                  </div>
-                  <div class="mb-3">
-                    <label for="reg-email" class="form-label">電子郵件地址 <span class="text-danger">*</span></label>
-                    <input type="email" class="form-control" id="reg-email" required>
-                    <div class="invalid-feedback">請輸入有效的 Email</div>
-                  </div>
-                  <div class="mb-3">
-                    <label for="reg-password" class="form-label">密碼 <span class="text-danger">*</span></label>
-                    <div class="input-group">
-                      <input type="password" class="form-control" id="reg-password" minlength="6" required>
-                      <button class="btn btn-outline-secondary password-toggle" type="button" data-target="#reg-password" aria-label="顯示/隱藏密碼"><i class="bi bi-eye"></i></button>
-                      <div class="invalid-feedback">請輸入至少 6 碼密碼</div>
-                    </div>
-                  </div>
-                  <p class="text-muted small mb-3">
-                    我們會使用你的個人資料以提供帳號存取權，以及於隱私權政策所述的其他用途。
-                  </p>
-                  <button type="submit" class="btn btn-gray w-100">註冊</button>
-                </form>
-              </div>
-            </div>
-          </div>
 
-          <!-- 右：說明 + 切換按鈕 -->
-          <div class="col-lg-6">
-            <div class="card h-100 shadow-sm">
-              <div class="card-body p-4 d-flex flex-column justify-content-center">
-                <h2 class="h4 fw-bold text-center mb-3" id="panel-title">註冊</h2>
-                <p class="text-muted text-center mb-4">
-                  註冊此網站可讓您保存訂單狀態和歷史記錄。只需填寫必要資訊，我們就會立即為您建立新帳戶。
-                </p>
-                <div class="d-grid gap-3">
-                  <button id="switch-to-login" class="btn btn-outline-gray">登入</button>
-                  <button id="switch-to-register" class="btn btn-outline-gray">註冊</button>
-                </div>
-                <div class="text-center small text-muted mt-3">點擊上方按鈕在登入與註冊之間切換。</div>
-              </div>
-            </div>
-          </div>
+          </ul>
         </div>
       </div>
+    </nav>
+
+  <!-- 主內容 -->
+  <main class="auth-viewport">
+    <!-- 背景照片（灰階+暗化）；換成你的圖就改 url 即可 -->
+    <div class="auth-bg" role="img" aria-label="background image"></div>
+
+    <!-- 卡片 -->
+    <section class="auth-card shadow-lg">
+      <!-- 品牌（已移除綠點） -->
+      <h1 class="auth-brand text-center">晨哥陶藝</h1>
+
+      <!-- 分頁 -->
+      <div class="auth-tabs">
+        <button class="auth-tab active" data-target="#form-signin">登入會員</button>
+        <button class="auth-tab" data-target="#form-signup">註冊會員</button>
+      </div>
+
+      <!-- 登入 -->
+      <form id="form-signin" class="auth-form" novalidate>
+        <div class="mb-3">
+          <input type="text" class="auth-input form-control" placeholder="使用者名稱/電子信箱" required>
+          <div class="invalid-feedback">請輸入帳號或 Email</div>
+        </div>
+        <div class="mb-3">
+          <input type="password" class="auth-input form-control" id="signinPwd" placeholder="密碼" required>
+          <div class="invalid-feedback">請輸入密碼</div>
+        </div>
+        <div class="d-flex align-items-center justify-content-between mb-3">
+          <label class="form-check text-secondary">
+            <input type="checkbox" class="form-check-input me-2"> 保持登入狀態
+          </label>
+          <a href="#" class="auth-link">忘記密碼？</a>
+        </div>
+        <button type="submit" class="btn btn-auth w-100">登入</button>
+      </form>
+
+      <!-- 註冊 -->
+      <form id="form-signup" class="auth-form d-none" novalidate>
+        <div class="mb-3">
+          <input type="text" class="auth-input form-control" placeholder="使用者名稱" required>
+          <div class="invalid-feedback">請輸入使用者名稱</div>
+        </div>
+        <div class="mb-3">
+          <input type="email" class="auth-input form-control" placeholder="電子郵件地址" required>
+          <div class="invalid-feedback">請輸入有效 Email</div>
+        </div>
+        <div class="mb-4">
+          <input type="password" class="auth-input form-control" id="signupPwd" placeholder="密碼（至少 6 碼）" minlength="6" required>
+          <div class="invalid-feedback">至少 6 碼</div>
+        </div>
+        <button type="submit" class="btn btn-auth w-100">註冊</button>
+      </form>
     </section>
   </main>
 
-  <footer class="text-center py-4 bg-white border-top">
-    <small><a href="#">使用條款</a> • <a href="#">隱私政策</a></small>
-  </footer>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
+  <!-- 本頁腳本 -->
+  <script src="account.js"></script>
 </body>
 </html>
