--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <img src="https://images.unsplash.com/photo-1557974477-dd1778bd9a3c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8JUU5JTk5JUI2JUU4JTk3JTlEfGVufDB8fDB8fHww" class="d-block w-100 carousel-img" alt="陶藝作品1" />
           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
             <h2 class="fw-bold">最新作品</h2>
-            <a href="#" class="btn btn-light btn-lg mt-3">Shop now</a>
+            <a href="products.html" class="btn btn-light btn-lg mt-3">Shop now</a>
           </div>
         </div>
         <!-- Slide 2 -->
@@ -59,7 +59,7 @@
           <img src="https://images.unsplash.com/photo-1647143378634-823137bbb515?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8JUU4JThDJUI2JUU2JTlEJUFGfGVufDB8fDB8fHww" class="d-block w-100 carousel-img" alt="陶藝作品2" />
           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
             <h2 class="fw-bold">手作茶具</h2>
-            <a href="#" class="btn btn-light btn-lg mt-3">探索更多</a>
+            <a href="products.html" class="btn btn-light btn-lg mt-3">探索更多</a>
           </div>
         </div>
         <!-- Slide 3 -->
@@ -67,7 +67,7 @@
           <img src="https://images.unsplash.com/photo-1617076678363-99dd6eb5150b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y3VwfGVufDB8fDB8fHww" class="d-block w-100 carousel-img" alt="陶藝作品3" />
           <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
             <h2 class="fw-bold">生活美學</h2>
-            <a href="#" class="btn btn-light btn-lg mt-3">立即選購</a>
+            <a href="products.html" class="btn btn-light btn-lg mt-3">立即選購</a>
           </div>
         </div>
       </div>
